--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,19 @@
+# Define the versions for various libraries
 [versions]
-agp = "8.6.0"
-kotlin = "1.9.0"
-playServicesWearable = "18.2.0"
-composeBom = "2024.04.01"
-composeMaterial = "1.2.1"
-composeFoundation = "1.2.1"
-wearToolingPreview = "1.0.0"
-activityCompose = "1.9.2"
-coreSplashscreen = "1.0.1"
-playServicesFitness = "21.2.0"
+agp = "8.6.0"                       # Android Gradle Plugin
+kotlin = "1.9.0"                    # Kotlin version
+playServicesWearable = "18.2.0"      # Google Play Services Wearable
+composeBom = "2024.04.01"            # Compose BOM version
+composeMaterial = "1.2.1"            # Compose Material for Wear version
+composeFoundation = "1.2.1"          # Compose Foundation for Wear version
+wearToolingPreview = "1.0.0"         # Wear Tooling Preview
+activityCompose = "1.9.2"            # Activity Compose version
+coreSplashscreen = "1.0.1"           # Core Splashscreen version
+playServicesFitness = "21.2.0"       # Play Services Fitness
+activityKtx = "1.9.2"                # Activity KTX version
+core = "1.13.1"                      # Core library version
 
+# Define libraries and their dependencies
 [libraries]
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
@@ -24,9 +28,10 @@ wear-tooling-preview = { group = "androidx.wear", name = "wear-tooling-preview",
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 play-services-fitness = { group = "com.google.android.gms", name = "play-services-fitness", version.ref = "playServicesFitness" }
+activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref = "activityKtx" }
+core = { group = "androidx.core", name = "core", version.ref = "core" }
 
+# Define plugins
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
-
